--- a/seccom_agent/manager_agent/.env
+++ b/seccom_agent/manager_agent/.env
@@ -2,4 +2,4 @@
 # GOOGLE_CLOUD_LOCATION=europe-west2
 # GOOGLE_GENAI_USE_VERTEXAI=TRUE
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
-GOOGLE_API_KEY=AIzaSyChd0a04X5U07--u9K0OMXvtOQNDMkK12U
+GOOGLE_API_KEY=********
