--- a/7-multi-agent/manager/.env
+++ b/7-multi-agent/manager/.env
@@ -1,5 +1,5 @@
-# GOOGLE_CLOUD_PROJECT=aishwarya-orgpolicy-test
+# GOOGLE_CLOUD_PROJECT=PUT_PROJECT_NAME
 # GOOGLE_CLOUD_LOCATION=europe-west2
 # GOOGLE_GENAI_USE_VERTEXAI=TRUE
 GOOGLE_GENAI_USE_VERTEXAI=FALSE
-GOOGLE_API_KEY=AIzaSyChd0a04X5U07--u9K0OMXvtOQNDMkK12U
+GOOGLE_API_KEY=********
